--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -28,6 +28,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install RATapi numpy
+    - name: Download MATLAB RAT
+      run: |
+        wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
+        unzip Linux.zip -d API/
     - name: Build docs
       run: python build_docs.py
     - name: Checkout gh-pages
