--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -22,12 +22,17 @@ jobs:
     - name: Set up MATLAB
       uses: matlab-actions/setup-matlab@v2
       with:
-        release: R2024a
+        release: R2023b
+        cache: true
+    - name: Run script
+      uses: matlab-actions/run-command@v2
+      with:
+        command: disp("Hello World")
     - name: Set up Python 
       uses: actions/setup-python@v4
     - name: Install dependencies
       run: |
-        export LD_LIBRARY_PATH=/opt/hostedtoolcache/MATLAB/2024.1.999/x64/bin/glnxa64/:$LD_LIBARY_PATH
+        export LD_LIBRARY_PATH=/opt/hostedtoolcache/MATLAB/2023.2.999/x64/bin/glnxa64/:$LD_LIBARY_PATH
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Download MATLAB RAT
