--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -8,24 +8,16 @@ on:
 
 jobs: 
   build:
-    runs-on: ubuntu-latest
+    runs-on: Linux
 
     steps:
     - uses: actions/checkout@v4      
-      with:
-        submodules: true
-    - name: Checkout gh-pages
-      uses: actions/checkout@v4
-      with:
-        ref: gh-pages
-        path: _web
-    - name: Set up MATLAB
-      uses: matlab-actions/setup-matlab@v2
     - name: Set up Python 
       uses: actions/setup-python@v4
+      with:
+        python-version: '3.11' 
     - name: Install dependencies
       run: |
-        export LD_LIBRARY_PATH=/opt/hostedtoolcache/MATLAB/2024.1.999/x64/bin/glnxa64/:$LD_LIBARY_PATH
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Download MATLAB RAT
@@ -33,19 +25,24 @@ jobs:
         wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
         unzip Linux.zip -d API/
     - name: Build docs
-      run: python build_docs.py
+      run: |
+        export RAT_URL="https://rascalsoftware.github.io/RAT-Docs/"
+        export RAT_VERSION="dev"
+        python build_docs.py
     - name: Checkout gh-pages
+      if: github.ref == 'refs/heads/main'
       uses: actions/checkout@v4
       with:
         ref: gh-pages
         path: _web
-    - name: Build and Deploy Docs
+    - name: Deploy Docs
+      if: github.ref == 'refs/heads/main'
       run: |
-        make html
-        python deploy.py ${{github.ref}}
+        python deploy.py
         cd _web
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add -A
         git commit -m "Publish Documentation" || true
         git push
+      
