--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -8,6 +8,9 @@ on:
 
 jobs: 
   build:
+    env:
+      RAT_URL: "https://rascalsoftware.github.io/RAT-Docs/"
+      RAT_VERSION: "dev"
     runs-on: Linux
 
     steps:
@@ -16,18 +19,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11' 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Download MATLAB RAT
+    - name: Build docs
       run: |
         wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
         unzip Linux.zip -d API/
-    - name: Build docs
-      run: |
-        export RAT_URL="https://rascalsoftware.github.io/RAT-Docs/"
-        export RAT_VERSION="dev"
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install RATapi
         python build_docs.py
     - name: Checkout gh-pages
       if: github.ref == 'refs/heads/main'
@@ -35,7 +33,7 @@ jobs:
       with:
         ref: gh-pages
         path: _web
-    - name: Deploy Docs
+    - name: Deploy docs locally
       if: github.ref == 'refs/heads/main'
       run: |
         python deploy.py
@@ -45,4 +43,3 @@ jobs:
         git add -A
         git commit -m "Publish Documentation" || true
         git push
-      
