--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -24,6 +24,7 @@ jobs:
         wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
         unzip Linux.zip -d API/
         python -m pip install --upgrade pip
+        pip install matlabengine==24.1.*
         pip install -r requirements.txt
         pip install RATapi
         python build_docs.py
