--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install matlabengine==24.1.*
         if [ ${RAT_VERSION} == 'dev' ]; then
           wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
           pip install RATapi
