--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -23,6 +23,9 @@ jobs:
       run: |
         wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
         unzip Linux.zip -d API/
+        # we get pandoc from web as apt version is outdated
+        wget https://github.com/jgm/pandoc/releases/download/3.6.2/pandoc-3.6.2-1-amd64.deb
+        sudo apt install -y ./pandoc-3.6.2-1-amd64.deb
         python -m pip install --upgrade pip
         pip install matlabengine==24.1.*
         pip install -r requirements.txt
