--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ sphinxcontrib-matlabdomain==0.18
 pydata-sphinx-theme==0.15.2
 sphinx_design==0.6.0
 sphinx-copybutton==0.5.2
+jupyter==1.0.0
+nbsphinx==0.9.6
 RATapi==0.0.0.dev4
 autodoc_pydantic==2.2.0
 enum-tools[sphinx]==0.12.0
