--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -21,8 +21,14 @@ jobs:
         python-version: '3.11' 
     - name: Build docs
       run: |
+        # create an x11 display because otherwise MATLAB refuses to export live scripts...
+        sudo apt install -y xvfb
+        export DISPLAY=':99.0'
+        Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+
         wget https://github.com/RascalSoftware/RAT/releases/download/nightly/Linux.zip
         unzip Linux.zip -d API/
+
         # we get pandoc from web as apt version is outdated
         wget https://github.com/jgm/pandoc/releases/download/3.6.2/pandoc-3.6.2-1-amd64.deb
         sudo apt install -y ./pandoc-3.6.2-1-amd64.deb
